--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,15 @@ footer{
     font-family: sans-serif;
 }
 
+#cake_icon{
+    width: 40px;
+    height: 40px;
+}
+
+video{
+    width: 80%;
+}
+
 @media only screen and (max-width: 992px){
 
     main, header{
@@ -127,6 +136,8 @@ footer{
     }
 
 }
+
+
 
 @media only screen and (max-width: 600px){
 
@@ -145,5 +156,26 @@ footer{
     h1{
         font-size: 30px;
     }
+
+    iframe{
+        width: 80vw;
+        height: 30vh;
+    }
+    
+    img{
+        width: 80vw;
+        height: 30vh;
+    }
+
+   body p{
+        font-size: 15px;
+
+    }
+
+    ul, ol{
+        font-size: 15px;
+    }
+        
+    
 
 }
